# GraphRAG-Dify

./: .gitignore  README.md  graph_rag_混合抽取（dify整合）最小可行專案.md  pyproject.toml
src/: config.py  main.py
src/dify/: client.py
src/extraction/: cache.py  pipeline.py  prompts.py
src/graph/: neo4j_client.py
src/io/: docx_parser.py  ocr.py  pdf_renderer.py
src/models/: schema.py
src/utils/: chunking.py  normalization.py  regexes.py
tests/: test_smoke.py
