```toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-dify"
version = "0.1.0"
description = "GraphRAG minimal project with DOCX parsing and Dify integration"
authors = [{name = "PANJIT AI"}]
requires-python = ">=3.10"
dependencies = [
  "python-docx>=1.0.0",
  "pydantic>=2.6",
  "python-dotenv>=1.0.1",
  "requests>=2.31",
  "tqdm>=4.66",
  "neo4j>=5.21",
  "PyMuPDF>=1.24.9",
  "Pillow>=10.3.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
```